# agent-lottery-picker

./: .env  .env.example  .gitignore  LoadLotteryPastResultsTool.py  LotteryPicker.py  README.md  SaturdayLottoPicker.py  SaturdayLottoResult.py  SaturdayLottoResults.csv  main.py  pyproject.toml
output/: Australia Saturday Lotto_past_results_06252024-121717.txt  Australia Saturday Lotto_past_results_06282024-153929.txt  Australia Saturday Lotto_past_results_07012024-114151.txt  Australia Saturday Lotto_past_results_07012024-114156.txt  Australia Saturday Lotto_strategy_06212024-161517.txt  Australia Saturday Lotto_winning_numbers_05252024-230036.txt  output_06212024-161542.txt  output_06252024-121742.txt  output_06282024-153954.txt  output_07012024-114211.txt  saturday_cold_number_and_buddies_06212024-161537.txt  saturday_cold_number_and_buddies_06252024-121737.txt  saturday_cold_number_and_buddies_06282024-153949.txt  saturday_cold_number_and_buddies_07012024-114206.txt  saturday_cold_number_and_relationship_06212024-161527.txt  saturday_cold_number_and_relationship_06252024-121727.txt  saturday_cold_number_and_relationship_06282024-153939.txt  saturday_hot_number_and_buddies_06212024-161532.txt  saturday_hot_number_and_buddies_06252024-121732.txt  saturday_hot_number_and_buddies_06282024-153944.txt  saturday_hot_number_and_buddies_07012024-114201.txt  saturday_hot_number_and_relationship_06212024-161522.txt  saturday_hot_number_and_relationship_06252024-121722.txt  saturday_hot_number_and_relationship_06282024-153934.txt  saturday_pattern_and_buddies_06252024-121742.txt  (+3 more)
