[tool.poetry]
name = "agent-lottery-picker"
version = "0.1.0"
description = ""
authors = ["ayamam1 <163369340+ayamam1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
crewai = "^0.30.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
