[tool.poetry]
name = "agent-lottery-picker"
version = "0.1.0"
description = "A lottery picker using on agentic AI"
authors = ["gusyama <77478609+gusyama@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = "^0.51.1"
langchain-groq = "^0.1.9"
crewai-tools = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
